--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tea-time-in-space",
   "version": "0.0.0",
-  "description": "A chrome extension to deliver cool facts and news about space",
+  "description": "A chrome extension to deliver interesting facts and news about space",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -14,7 +14,11 @@
     "fix-style": "npx eslint --fix \"**/*.{js,jsx,ts,tsx}\" --ignore-pattern node_modules --ignore-pattern build"
   },
   "dependencies": {
-    "daisyui": "^2.51.6",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.3",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -27,7 +31,6 @@
     "@types/chrome": "^0.0.202",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "autoprefixer": "^10.4.14",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
     "babel-preset-react-app": "^10.0.1",
@@ -45,14 +48,11 @@
     "fs-extra": "^11.1.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "postcss": "^8.4.23",
-    "postcss-loader": "^7.3.0",
     "prettier": "^2.8.3",
     "react-refresh": "^0.14.0",
     "react-refresh-typescript": "^2.0.7",
     "source-map-loader": "^3.0.1",
     "style-loader": "^3.3.1",
-    "tailwindcss": "^3.3.2",
     "terser-webpack-plugin": "^5.3.6",
     "ts-loader": "^9.4.2",
     "type-fest": "^3.5.2",
