--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 3,
   "name": "Tea Time In Space",
   "description": "Sip your tea and enjoy some facts/news (current and old) about space!",
+  "background": { "service_worker": "background.bundle.js" },
   "action": {
-    "default_popup": "popup.html",
     "default_icon": "icon-34.png"
   },
   "chrome_url_overrides": {
