--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "dotenv": "^16.0.3",
-    "jotai": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
