--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,7 +12,7 @@
   "icons": {
     "128": "icon-128.png"
   },
-
+  "permissions": ["storage"],
   "web_accessible_resources": [
     {
       "resources": ["icon-128.png", "icon-34.png"],
