--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,18 +4,18 @@
   "description": "Sip your tea and enjoy some facts/news (current and old) about space!",
   "background": { "service_worker": "background.bundle.js" },
   "action": {
-    "default_icon": "icon-34.png"
+    "default_icon": "logo-32.png"
   },
   "chrome_url_overrides": {
     "newtab": "newtab.html"
   },
   "icons": {
-    "128": "icon-128.png"
+    "128": "logo-128.png"
   },
   "permissions": ["storage"],
   "web_accessible_resources": [
     {
-      "resources": ["icon-128.png", "icon-34.png"],
+      "resources": ["logo-128.png, logo-32.png"],
       "matches": []
     }
   ]
