--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@mui/material": "^5.12.3",
     "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "@babel/preset-react": "^7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@types/chrome": "^0.0.202",
+    "@types/leaflet": "^1.9.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "babel-eslint": "^10.1.0",
