feat: add readme

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tea-time-in-space",
+  "author": "Johnny Labedzki",
   "version": "0.0.0",
   "description": "A chrome extension to deliver interesting facts and news about space",
   "license": "MIT",
